# editmonaco

./: README.md  bun.lockb  config.js  editors.js  index.html  metadata.js  package-lock.json  package.json  style.css  theme.css  websocket.js
beetsplug/: editmonaco.py  pyproject.toml  requirements.txt
